# OnDeviceAi

./: AGENTS.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/schemas/com.droidrocks.ondeviceai.data.ChatDatabase/: 1.json
app/src/androidTest/java/com/droidrocks/ondeviceai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/droidrocks/ondeviceai/: App.java  BaseActivity.java  ChatHistoryActivity.java  LlamaBridge.java  MainActivity.java  ModelListActivity.java  ModelUtils.java  RuntimeLog.java  SettingsActivity.java
app/src/main/java/com/droidrocks/ondeviceai/Utils/: CpuMonitor.java  GpuInfo.java  RamMonitor.java
app/src/main/java/com/droidrocks/ondeviceai/adapter/: AvailableModelsAdapter.java  ChatAdapter.java  ChatHistoryAdapter.java  DownloadedModelsAdapter.java  ModelsPagerAdapter.java
app/src/main/java/com/droidrocks/ondeviceai/data/: AvailableModel.java  ChatDatabase.java  ChatMessage.java  ChatMessageDao.java  ChatRepository.java  ChatSession.java
app/src/main/java/com/droidrocks/ondeviceai/fragment/: AvailableModelsFragment.java  DownloadedModelsFragment.java
app/src/main/res/drawable/: automation_24dp.xml  badge_size.xml  bubble_ai.xml  bubble_user.xml  clear_all_24dp.xml  dotted_divider.xml  ic_chat.xml  ic_cloud_download.xml  ic_cpu.xml  ic_download.xml  ic_folder.xml  ic_gpu.xml  ic_history.xml  ic_memory.xml  ic_model.xml  ic_robot.xml  ic_settings.xml  ic_stop.xml  ic_terminal.xml  ic_timer.xml  ic_vulkan.xml  input_background.xml  ram_memory_alt_24dp.xml  status_chip_background.xml
app/src/main/res/layout/: activity_chat_history.xml  activity_main.xml  activity_model_list.xml  activity_settings.xml  fragment_available_models.xml  fragment_downloaded_models.xml  item_available_model.xml  item_chat_ai.xml  item_chat_history.xml  item_chat_user.xml  item_downloaded_model.xml
app/src/main/res/menu/: menu_chat_history.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/droidrocks/ondeviceai/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
